--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Ananye Pandey
+description: Welcome to my website! Please feel free to check out my projects and details! 
