--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: Hi, I'm Ananye!
-description:  Welcome to my website. Please feel free to check out my projects and details! 
-baseurl: /index
+description:  Welcome to my website.
+baseurl: ap3885.github.io/
